--- a/css/base.css
+++ b/css/base.css
@@ -51,10 +51,9 @@ a img {
 
 body {
 	background-color: #FFFFFF;
-	font: 14px/20px 'Raleway', sans-serif;
 }
 p {
-	font: 20px/26px 'Raleway', sans-serif;
+	font: 24px 'Raleway', sans-serif;
 }
 
 /* HOME */
@@ -74,17 +73,17 @@ p {
 	text-align: center;
 }
 #home #home_header h1 {
-	padding: 2% 0 0.5% 0;
-	font: 44px/50px 'Dekiru', sans-serif;
+	padding: 3% 0 1% 0;
+	font: 58px 'Dekiru', sans-serif;
 }
 #home #home_header h2 {
-	padding: 0.5% 0 1.5% 0;
+	padding: 1% 0 3% 0;
 	text-transform: uppercase;
-	font: 38px/44px 'Castrade', sans-serif;
+	font: 52px 'Castrade', sans-serif;
 }
 
 #home #home_center {
-	height: 65%;
+	height: 54%;
 	width: 100%;
 }
 #home #home_center .background {
